--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,6 +11,12 @@
             </table>
             <input type="button" value="add", id="add_button">
             <input type="button" value="save", id="save_button">
+            <br>
+            <label for="">randomized rest</label>
+            <input type="checkbox" id="random_rest">
+            <br>
+            <label for="">randomized work</label>
+            <input type="checkbox" id="random_work">
         </form>
         <script src="popup.js"></script>
     </body>
